--- a/componentes-01/index.html
+++ b/componentes-01/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="./src/assets/favnicon.ico" type="image/x-icon">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AnthrBoy</title>
+    <title>GIF+BANNER</title>
   </head>
   <body>
     <div id="root"></div>
